--- a/IniParserTests/IniParserTests.csproj
+++ b/IniParserTests/IniParserTests.csproj
@@ -51,7 +51,7 @@
     </Otherwise>
   </Choose>
   <ItemGroup>
-    <Compile Include="BMyCustomDataTests.cs" />
+    <Compile Include="BMyIniTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
